force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/GWB_Budget_Comment__c.object-meta.xml
<CustomObject>
    <description>Cell-level comments captured against GWB budget workbench values.</description>
    <label>GWB Budget Comment</label>
    <nameField>
        <displayFormat>GWBC-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GWB Budget Comments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>