force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Cell_Key__c.field-meta.xml
<CustomField>
    <fullName>Cell_Key__c</fullName>
    <label>Cell Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>