force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>