force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <label>Comment Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>