force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/GWB_Year__c.field-meta.xml
<CustomField>
    <fullName>GWB_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GWB Year</label>
    <referenceTo>GWB_Year__c</referenceTo>
    <relationshipLabel>Budget Comments</relationshipLabel>
    <relationshipName>Budget_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>