force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Month_Key__c</fullName>
    <label>Month Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>