force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Original_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date__c</fullName>
    <description>Used to store the original created date/time after cloning the record.</description>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>