force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Row_Key__c</fullName>
    <label>Row Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>