force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Row_Label__c.field-meta.xml
<CustomField>
    <fullName>Row_Label__c</fullName>
    <label>Row Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>