force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <label>Table Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>