force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Budget_Comment__c/fields/Value_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Value_Snapshot__c</fullName>
    <label>Value Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>